tests/e2e/fail/ptr_subscript.ep
# COMPILE_ERROR: type ptr is not subscriptable
fun main(): void {
    let pointer = cstr("abc")
    print(itoa(pointer[0]))
}
